--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,9 @@
+$breakpoint_xxl: 1200px;
+$breakpoint_xl: 1024px;
+$breakpoint_md: 767px;
+$breakpoint_sm: 576px;
+$breakpoint_esm: 390px;
+
 /*       DARK THEME       */
 html[data-theme = 'dart']{
 	--bc-Main: #2e3440;
