--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,3 +2,8 @@
 @import './variables.scss';
 @import './libs/normalize.scss';
 @import './components/all.scss';
+
+body{
+
+	background-color: var(--bc-Main);
+}
