--- a/src/components/elements/posts/post.module.scss
+++ b/src/components/elements/posts/post.module.scss
@@ -2,6 +2,7 @@
 
 
 .post{
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	border-radius: 10px;
@@ -46,7 +47,70 @@
 
 .title{
 	color: var(--text-main);
+	padding: 30px 0 40px 15px;
+
 }
 .time{
 	color: var(--text-main);
+		font-size: 14px;
+	span{
+		font-size: 14px;
+		color: antiquewhite;
+		
+	}
+}
+
+.TimeInner{
+	padding: 15px;
+}
+
+.delete{
+	cursor: pointer;
+	position: absolute;
+	right: 20px;
+	z-index: 2;
+	background-color: rgba(28,28,28,0);
+	font-size: 60px;
+	color: red;
+	font-weight: 900;
+	transform: rotate(45deg);
+	border-radius: 50%;
+	width: 40px;
+	height:  40px;
+	border: 1px saddlebrown solid;
+
+}
+
+
+.creator{
+	background-color: var(--btn-main);
+	margin: 10px 4px;
+	border-radius: 20px;
+	min-height: 70px;
+	display: flex;
+	align-items: center;
+	padding: 0 20px;
+	gap: 40px;
+}
+.creatorImg{
+	background-color: var(--bc-Main);
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	position: relative;
+	overflow: hidden;
+	border: 2px solid #3b4252;
+	img{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+}
+.creatorInfo{
+	color: var(--text-main);
+	font-weight: 700;
+	border: 2px solid #3b4252;
+	border-radius: 20px;
+	padding: 5px 30px;
 }
