--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,4 +1,6 @@
 @import './header.scss';
 @import './other.scss';
 @import './main.scss';
-@import './login.scss'
+@import './login.scss';
+@import './addPost';
+@import './fullPost'
